# Hazy

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml
debian/: changelog  control  copyright  install  postinst
packaging/: nemoclaw-control.desktop
scripts/: easy-install-and-launch.sh  github-push-doctor.sh  nemoclaw-control-launcher  publish-main-and-build.sh
src/nemoclaw_control/: app.py
src/nemoclaw_control/integrations/: credentials.py  twitch.py
src/nemoclaw_control/logging/: setup.py
src/nemoclaw_control/orchestrator/: actions.py  detector.py  parsers.py  recovery.py  runner.py
src/nemoclaw_control/state/: models.py
src/nemoclaw_control/ui/: main_window.py
tests/: test_parsers.py  test_recovery.py  test_runner.py
