[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemoclaw-control"
version = "0.1.0"
description = "Ubuntu desktop installer and control center for NemoClaw"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "NemoClaw Control Team"}]
dependencies = [
  "PySide6>=6.7",
  "requests>=2.31",
  "keyring>=24",
]

[project.scripts]
nemoclaw-control = "nemoclaw_control.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
